--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>spring-boot-all-exception-handler</module>
         <module>spring-boot-all-zookeeper-lock</module>
         <module>spring-boot-all-ehcache</module>
+        <module>spring-boot-all-security</module>
     </modules>
     <packaging>pom</packaging>
 
